--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #000000; /* Dark green background */
   color: #F5F5F5; /* Off-white text color for contrast */
+  --color-primary: #F5F5F5;
+  --color-secondary: #002396;
 
   display: flex;
   flex-direction: column;
